# Q-agent

./: .gitignore  .lycheeignore  404.html  AGENTS.md  GETTING_STARTED.md  README.md  claude.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  sitemap.xml
agent-workflows/: index.html
agent_graph_system/: README.md  claude.md  main.py  requirements.txt
architecture/: index.html
architecture-hybrid-graph/: index.html
contributing/: index.html
docker/: index.html
docs/: agent-workflows.md  architecture-hybrid-graph.md  architecture.md  contributing.md  docker.md  getting-started.md  golden-path.md  index.md  notebooks.md  project-map.md  release-checklist.md  research-examples.md  research-recipes.md  roadmap.md  start-here.md  testing.md  why-q-agent.md
getting-started/: index.html
golden-path/: index.html
infrastructure/: requirements.txt  setup.sh
infrastructure/pipelines/massive/: .env.example  .gitignore  claude.md  pyproject.toml
infrastructure/pipelines/massive/scripts/: run_futures_pipeline.py  run_options_pipeline.py
infrastructure/pipelines/massive/src/massive_lean/: __init__.py  client.py  config.py  transform.py  writer.py
infrastructure/pipelines/polymarket/: pyproject.toml
infrastructure/pipelines/polymarket/scripts/: run_btc_fair_value_example.py  run_markets_pipeline.py
infrastructure/pipelines/polymarket/src/polymarket_lean/: gamma.py  writer.py
notebooks/: index.html
overrides/: home.html
pipelines/: index.html
project-map/: index.html
recordings/: agent-workflow.cast  lean-backtest.cast
(+169 files in other folders)
